changing to module sintax

--- a/backend/package.json
+++ b/backend/package.json
@@ -1,6 +1,7 @@
 {
   "name": "mevn-peluqueria-backend",
   "version": "1.0.0",
+  "type": "module",
   "description": "app backend",
   "main": "index.js",
   "scripts": {
