--- a/backend/package.json
+++ b/backend/package.json
@@ -11,6 +11,9 @@
   "author": "puly garcia",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.18.2"
+    "colors": "^1.4.0",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "mongoose": "^7.5.3"
   }
 }
