--- a/backend/package.json
+++ b/backend/package.json
@@ -6,7 +6,9 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "node --watch index.js"
+    "dev": "node --watch index.js",
+    "seed:import": "node data/seed --import",
+    "seed:destroy": "node data/seed --destroy"
   },
   "author": "puly garcia",
   "license": "ISC",
