--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,7 +11,8 @@
     "axios": "^1.5.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
-    "vue-router": "^4.2.4"
+    "vue-router": "^4.2.4",
+    "vue-tailwind-datepicker": "^1.5.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.3.4",
