--- a/backend/package.json
+++ b/backend/package.json
@@ -7,6 +7,7 @@
   "scripts": {
     "start": "node index.js",
     "dev": "node --watch index.js",
+    "dev:postman": "node --watch index.js --postman",
     "seed:import": "node data/seed --import",
     "seed:destroy": "node data/seed --destroy"
   },
