register formkit added, ready to make the request to the backend

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -8,6 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/themes": "^1.2.2",
+    "@formkit/vue": "^1.2.2",
     "axios": "^1.5.1",
     "pinia": "^2.1.6",
     "vue": "^3.3.4",
